[tool.black]
line-length = 119
target-version = ['py39']

[tool.mypy]
python_version = "3.9"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["llm_playground"]

# Above lines are ported from https://github.com/huggingface/transformers/tree/v4.28.1/pyproject.toml and modified.

[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = "benchmarking & experiment"
authors = ["5ei74R0 <XXXXXXX.X@XXXXX.XXX>"]
license = "BSD-3-Clause-Clear"
readme = "README.md"
packages = [{include = "llm_playground"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.0.0"
torchtext = "^0.15.1"
transformers = "^4.28.1"
peft = "^0.3.0"
fire = "^0.5.0"
bitsandbytes = "^0.38.1"
scipy = "^1.10.1"
accelerate = "^0.18.0"
sentencepiece = "^0.1.99"
portalocker = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.265"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
